dsp-cli/tests/snapshots/resource_type_describe_snapshots__resource_type_describe_json.snap
---
source: tests/resource_type_describe_snapshots.rs
expression: buf_to_string(&buf)
---
{"_meta":{"server":"https://api.dasch.swiss","auth":"anonymous","exit_code":0},"data":{"name":"manuscript","iri":"http://api.dasch.swiss/ontology/0801/beol/v2#manuscript","label":"Manuscript","data_model":"beol","representation":"still-image","super_types":["writtenSource"],"fields":[{"name":"title","iri":"http://api.dasch.swiss/ontology/0801/beol/v2#title","label":"Title","value_type":"text","link_target":null,"cardinality":"1-n","is_builtin":false,"data_model":"beol"},{"name":"hasAuthor","iri":"http://api.dasch.swiss/ontology/0801/beol/v2#hasAuthor","label":"Author","value_type":"link","link_target":"person","cardinality":"0-n","is_builtin":false,"data_model":"beol"},{"name":"hasText","iri":"http://api.dasch.swiss/ontology/0801/beol/v2#hasText","label":"Text","value_type":"text","link_target":null,"cardinality":"0-1","is_builtin":false,"data_model":"beol"},{"name":"isPartOfCollection","iri":"http://api.dasch.swiss/ontology/0801/biblio/v2#isPartOfCollection","label":"is part of","value_type":"link","link_target":"Collection","cardinality":"0-n","is_builtin":false,"data_model":"biblio"},{"name":"hasURI","iri":"http://api.dasch.swiss/ontology/0801/biblio/v2#hasURI","label":"URI","value_type":"uri","link_target":null,"cardinality":"0-n","is_builtin":false,"data_model":"biblio"}]}}
