dsp-cli/tests/snapshots/resource_type_describe_snapshots__resource_type_describe_tsv_stderr.snap
---
source: tests/resource_type_describe_snapshots.rs
expression: buf_to_string(&err_buf)
---
[anonymous on https://api.dasch.swiss]
